# worldguard

./: .gitignore  CHANGELOG.md  README.md  WorldGuard_TECHNICAL_SPEC.md  pyproject.toml
.flowguard/: adoption_log.jsonl  worldguard_field_lifecycle.md  worldguard_model_mesh_core.md  worldguard_model_mesh_field_lifecycle.md  worldguard_model_mesh_model_test_alignment.md  worldguard_mvp_structure.md
assets/readme-hero/: hero_design_note.md  hero_prompt.md
docs/: Atomic_Acceptance_Matrix.md  flowguard_adoption_log.md  productization_audit.md
examples/fuel_cell/: expected_guard_report.yaml  input_story_fragment.yaml  ledger_outputs.yaml  world_model.yaml
examples/model_mesh/: basic_mesh.yaml
openspec/changes/add-worldguard-model-mesh-core/: design.md  proposal.md  tasks.md
openspec/changes/productize-worldguard-mvp/: design.md  proposal.md  tasks.md
skills/worldguard/: SKILL.md
skills/worldguard/.skillguard/: check_manifest.json  skillguard_closure_policy.json  skillguard_evidence_rules.json  skillguard_manifest.json  skillguard_profile.json  work-contract.json  (+2 more)
tests/: __init__.py  helpers.py  test_contracts.py  test_fuel_cell_demo.py  test_kernel_handoff.py  test_ledgers.py  test_model_mesh.py
tests/guards/: test_status_matrix.py
worldguard/: __init__.py  cli.py  contracts.py  io.py  kernel.py  ledgers.py  mesh.py  reports.py  status.py
worldguard/examples/: __init__.py  fuel_cell.py
worldguard/guards/: __init__.py  _helpers.py  agent_guard.py  causal_guard.py  conflict_guard.py  event_guard.py  norm_guard.py  resource_guard.py  space_guard.py
(+23 files in other folders)
