[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "worldguard"
version = "0.1.1"
description = "Model-first guard framework for auditable world-claim checks."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0"]

[project.urls]
Homepage = "https://github.com/liuyingxuvka/worldguard"
Repository = "https://github.com/liuyingxuvka/worldguard"
Issues = "https://github.com/liuyingxuvka/worldguard/issues"

[project.scripts]
worldguard = "worldguard.cli:main"

[tool.setuptools.packages.find]
include = ["worldguard*"]

[tool.setuptools.package-data]
"worldguard.examples" = ["fuel_cell/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
